Convert HTML/CSS Home page (70%)

--- a/html/home.html
+++ b/html/home.html
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="why-choose">
-        <div class="background"><img src="images/before-why-choose.png" height="141"></div>
+        <div class="background-before"><img src="images/before-why-choose.png" height="280"></div>
         <div class="container">
           <h1 class="title">why choose patra group</h1>
           <ul class="row">
@@ -119,6 +119,65 @@
               <h3 class="sub-title">modern</h3><span>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span>
             </li>
           </ul><a href="" class="read-more">read more about us</a>
+        </div>
+        <div class="background-after"><img src="images/after-why-choose.png" height="143"></div>
+      </div>
+      <div class="testimonials">
+        <div class="container">
+          <h1 class="title">testimonials</h1>
+          <ul class="testimonials-bxSlider">
+            <li>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
+                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p><i class="iconsp-35-quoteclose"></i>
+                  <h4 class="company">pasiri's</h4><span>Eatwood</span>
+                </div>
+              </div>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
+                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p><i class="iconsp-35-quoteclose"></i>
+                  <h4 class="company">pasiri's</h4><span>Eatwood</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div><a href="" style="padding-top: 24px;" class="logo-image"><img src="images/testimonials-logo-2.jpg"></a>
+                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p><i class="iconsp-35-quoteclose"></i>
+                  <h4 class="company">subway</h4><span>Marrickville</span>
+                </div>
+              </div>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-3.jpg"></a>
+                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">garlos pies</h4><span>Eatwood</span><i class="iconsp-35-quoteclose"></i>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
+                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">pasiri's</h4><span>Eatwood</span><i class="iconsp-35-quoteclose"></i>
+                </div>
+              </div>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-3.jpg"></a>
+                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">garlos pies</h4><span>Eatwood</span><i class="iconsp-35-quoteclose"></i>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+          <ul>
+            <li><i class="iconsp-35-facebook"></i><a href="">Privacy Policy</a></li>
+            <li><span>Copyright © 2014 Patra Group Pty Ltd. All rights reserved.</span></li>
+            <li><span>Designed by Openseed</span></li>
+          </ul>
         </div>
       </div>
     </div>
