--- a/html/home.html
+++ b/html/home.html
@@ -15,20 +15,46 @@
   </head>
   <body>
     <div class="home-page page">
-      <div class="header">
-        <div class="container"><a href="" class="logo"><img src="images/logo.png"></a>
-          <div class="navbar">
-            <div class="info"><span>(02)9597 6788</span><span>info@patragroup.con.au</span><span>4/450 West Botany Street, Rockdale NSW, 2216</span></div>
-            <ul class="menu">
-              <li><a href="">about</a></li>
-              <li><a href="">services</a></li>
-              <li><a href="">portfolio</a></li>
-              <li><a href="">contact</a></li>
-            </ul>
-          </div><a href="" class="enquire"><i class="iconsp-35-enquire"></i><span>enquire</span></a>
-        </div>
-      </div>
       <div class="slider">
+        <div id="header" class="header">
+          <div class="container"><a href="" class="logo"><img src="images/logo.png"></a>
+            <div class="navbar">
+              <div class="info"><span>(02)9597 6788</span><span>info@patragroup.con.au</span><span>4/450 West Botany Street, Rockdale NSW, 2216</span></div>
+              <ul class="menu">
+                <li><a href="">about</a></li>
+                <li><a href="">services</a></li>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">contact</a></li>
+              </ul>
+            </div><a href="" class="enquire"><i class="iconsp-35-enquire"></i><span>enquire</span></a>
+          </div>
+        </div>
+        <div id="header-mobile" class="header">
+          <ul id="menu" class="menu">
+            <li><a href="" class="scroll">about</a></li>
+            <li><a href="" class="scroll">services</a>
+              <ul>
+                <li><a href="" class="scroll">stainless steel fabrication</a></li>
+                <li><a href="" class="scroll">refrigeration</a></li>
+                <li><a href="" class="scroll">shopfitting</a></li>
+                <li><a href="" class="scroll">catering equipment</a></li>
+                <li><a href="" class="scroll">design & consilation</a></li>
+              </ul>
+            </li>
+            <li><a href="" class="scroll">portfolio</a></li>
+            <li><a href="" class="scroll">contact</a></li>
+            <li><a href="" class="scroll"><i class="iconsp-35-enquire-mobile"></i><span>enquire</span></a></li>
+          </ul>
+          <div id="main-menu"><a href="" class="logo"><img src="images/logo.png"></a>
+            <div class="contact-mobile">
+              <ul>
+                <li><a href=""><i class="iconsp-35-email"></i></a></li>
+                <li><a href=""><i class="iconsp-35-location"></i></a></li>
+                <li><a href=""><i class="iconsp-35-phone-white"></i></a></li>
+              </ul><a href="" class="phone-mobile"><i class="iconsp-35-phone-black"></i></a>
+            </div>
+          </div>
+        </div>
         <ul class="main-bxslider">
           <li><img src="images/slide-1.jpg" height="730">
             <div class="title">
@@ -57,7 +83,7 @@
           <h1 class="title">services</h1>
           <ul class="services-list">
             <li>
-              <h4 class="sub-title">stainless steel fabrication</h4><a href=""><i class="iconsp-steel"></i></a>
+              <h4 class="sub-title"><span>stainless steel fabrication</span></h4><a href=""><i class="iconsp-steel"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -66,7 +92,7 @@
               </ul>
             </li>
             <li>
-              <h4 class="sub-title">refrigeration</h4><a href=""><i class="iconsp-fridge"></i></a>
+              <h4 class="sub-title"><span>refrigeration</span></h4><a href=""><i class="iconsp-fridge"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -75,7 +101,7 @@
               </ul>
             </li>
             <li>
-              <h4 class="sub-title">shopfitting</h4><a href=""><i class="iconsp-shopfitting"></i></a>
+              <h4 class="sub-title"><span>shopfitting</span></h4><a href=""><i class="iconsp-shopfitting"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -84,7 +110,7 @@
               </ul>
             </li>
             <li>
-              <h4 class="sub-title">catering equipment</h4><a href=""><i class="iconsp-catering"></i></a>
+              <h4 class="sub-title"><span>catering equipment</span></h4><a href=""><i class="iconsp-catering"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -93,7 +119,7 @@
               </ul>
             </li>
             <li>
-              <h4 class="sub-title">design & consilation</h4><a href=""><i class="iconsp-design"></i></a>
+              <h4 class="sub-title"><span>design & consilation</span></h4><a href=""><i class="iconsp-design"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -128,43 +154,43 @@
           <ul class="testimonials-bxSlider">
             <li>
               <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
-                <div class="content"><i class="iconsp-35-quoteopen"></i>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p><i class="iconsp-35-quoteclose"></i>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
                   <h4 class="company">pasiri's</h4><span>Eatwood</span>
                 </div>
               </div>
               <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
-                <div class="content"><i class="iconsp-35-quoteopen"></i>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p><i class="iconsp-35-quoteclose"></i>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
                   <h4 class="company">pasiri's</h4><span>Eatwood</span>
                 </div>
               </div>
             </li>
             <li>
               <div><a href="" style="padding-top: 24px;" class="logo-image"><img src="images/testimonials-logo-2.jpg"></a>
-                <div class="content"><i class="iconsp-35-quoteopen"></i>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p><i class="iconsp-35-quoteclose"></i>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
                   <h4 class="company">subway</h4><span>Marrickville</span>
                 </div>
               </div>
               <div><a href="" class="logo-image"><img src="images/testimonials-logo-3.jpg"></a>
-                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                <div class="content">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
-                  <h4 class="company">garlos pies</h4><span>Eatwood</span><i class="iconsp-35-quoteclose"></i>
+                  <h4 class="company">garlos pies</h4><span>Eatwood</span>
                 </div>
               </div>
             </li>
             <li>
               <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
-                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                <div class="content">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
-                  <h4 class="company">pasiri's</h4><span>Eatwood</span><i class="iconsp-35-quoteclose"></i>
+                  <h4 class="company">pasiri's</h4><span>Eatwood</span>
                 </div>
               </div>
               <div><a href="" class="logo-image"><img src="images/testimonials-logo-3.jpg"></a>
-                <div class="content"><i class="iconsp-35-quoteopen"></i>
+                <div class="content">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
-                  <h4 class="company">garlos pies</h4><span>Eatwood</span><i class="iconsp-35-quoteclose"></i>
+                  <h4 class="company">garlos pies</h4><span>Eatwood</span>
                 </div>
               </div>
             </li>
@@ -175,7 +201,7 @@
         <div class="container">
           <ul>
             <li><i class="iconsp-35-facebook"></i><a href="">Privacy Policy</a></li>
-            <li><span>Copyright © 2014 Patra Group Pty Ltd. All rights reserved.</span></li>
+            <li><span>Copyright © 2014 Patra Group Pty Ltd.</span><span>All rights reserved.</span></li>
             <li><span>Designed by Openseed</span></li>
           </ul>
         </div>
@@ -184,6 +210,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
