--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
