Fix bug mobile version

--- a/html/home.html
+++ b/html/home.html
@@ -17,7 +17,8 @@
     <div class="home-page page">
       <div class="slider">
         <div id="header" class="header">
-          <div class="container"><a href="" class="logo"><img src="images/logo.png"></a>
+          <div class="container"><a href="" class="logo"><img src="images/logo.png">
+              <div class="logo-traingle"></div></a>
             <div class="navbar">
               <div class="info"><span>(02)9597 6788</span><span>info@patragroup.con.au</span><span>4/450 West Botany Street, Rockdale NSW, 2216</span></div>
               <ul class="menu">
@@ -83,7 +84,9 @@
           <h1 class="title">services</h1>
           <ul class="services-list">
             <li>
-              <h4 class="sub-title"><span>stainless steel fabrication</span></h4><a href=""><i class="iconsp-steel"></i></a>
+              <h4 class="sub-title"><span>stainless steel fabrication</span>
+                <div class="traingle"></div>
+              </h4><a href=""><i class="iconsp-steel"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -92,7 +95,9 @@
               </ul>
             </li>
             <li>
-              <h4 class="sub-title"><span>refrigeration</span></h4><a href=""><i class="iconsp-fridge"></i></a>
+              <h4 class="sub-title"><span>refrigeration</span>
+                <div class="traingle"></div>
+              </h4><a href=""><i class="iconsp-fridge"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -101,7 +106,9 @@
               </ul>
             </li>
             <li>
-              <h4 class="sub-title"><span>shopfitting</span></h4><a href=""><i class="iconsp-shopfitting"></i></a>
+              <h4 class="sub-title"><span>shopfitting</span>
+                <div class="traingle"></div>
+              </h4><a href=""><i class="iconsp-shopfitting"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -110,7 +117,9 @@
               </ul>
             </li>
             <li>
-              <h4 class="sub-title"><span>catering equipment</span></h4><a href=""><i class="iconsp-catering"></i></a>
+              <h4 class="sub-title"><span>catering equipment</span>
+                <div class="traingle"></div>
+              </h4><a href=""><i class="iconsp-catering"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
@@ -119,7 +128,9 @@
               </ul>
             </li>
             <li>
-              <h4 class="sub-title"><span>design & consilation</span></h4><a href=""><i class="iconsp-design"></i></a>
+              <h4 class="sub-title"><span>design & consilation</span>
+                <div class="traingle"></div>
+              </h4><a href=""><i class="iconsp-design"></i></a>
               <ul class="name-list">
                 <li><span class="dot">.</span><span>Service Name</span></li>
                 <li><span class="dot">.</span><span>Service Name</span></li>
