Edit logo mobile version

--- a/html/home.html
+++ b/html/home.html
@@ -46,7 +46,8 @@
             <li><a href="" class="scroll">contact</a></li>
             <li><a href="" class="scroll"><i class="iconsp-35-enquire-mobile"></i><span>enquire</span></a></li>
           </ul>
-          <div id="main-menu"><a href="" class="logo"><img src="images/logo.png"></a>
+          <div id="main-menu"><a href="" class="logo"><img src="images/logo.png">
+              <div class="logo-traingle"></div></a>
             <div class="contact-mobile">
               <ul>
                 <li><a href=""><i class="iconsp-35-email"></i></a></li>
