--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,266 @@
     <link href="scss/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="home-page page">
+      <div class="slider">
+        <div id="header" class="header">
+          <div class="container"><a href="index.html" class="logo"><img src="images/logo.png">
+              <div class="logo-traingle"></div></a>
+            <div class="navbar">
+              <div class="info"><span>(02)9597 6788</span><span>info@patragroup.con.au</span><span>4/450 West Botany Street, Rockdale NSW, 2216</span></div>
+              <ul class="menu">
+                <li><a href="">about</a></li>
+                <li class="service-hover"><a href="">services</a>
+                  <ul class="sub-menu">
+                    <li><a href="stainless-steel-fabrication.html" class="scroll">stainless steel fabrication</a></li>
+                    <li><a href="refrigeration.html" class="scroll">refrigeration</a></li>
+                    <li><a href="shopfitting.html" class="scroll">shopfitting</a></li>
+                    <li><a href="catering-equipment.html" class="scroll">catering equipment</a></li>
+                    <li><a href="design-consilation.html" class="scroll">design & consilation</a></li>
+                  </ul>
+                </li>
+                <li><a href="portfolio.html">portfolio</a></li>
+                <li><a href="contact.html">contact</a></li>
+              </ul>
+            </div>
+            <div class="enquire">
+              <div class="btn-enquire"><i class="iconsp-35-enquire"></i><span>enquire</span></div>
+              <div class="box-enquire row">
+                <div class="box-left col-md-3">
+                  <div class="title">get in touch</div>
+                  <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                </div>
+                <div class="box-center col-md-6">
+                  <div class="form-group row">
+                    <div class="col-md-6">
+                      <input type="text" id="usr" class="form-control">
+                    </div>
+                    <div class="col-md-6">
+                      <input type="text" id="usr" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <div class="col-md-3">
+                      <input type="text" id="usr" class="form-control">
+                    </div>
+                    <div class="col-md-3">
+                      <input type="text" id="usr" class="form-control">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" id="usr" class="form-control">
+                  </div>
+                </div>
+                <div class="box-right col-md-3"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="header-mobile" class="header">
+          <ul id="menu" class="menu">
+            <li><a href="about.html" class="scroll">about</a></li>
+            <li><a href="" class="scroll">services</a>
+              <ul>
+                <li><a href="" class="scroll">stainless steel fabrication</a></li>
+                <li><a href="" class="scroll">refrigeration</a></li>
+                <li><a href="" class="scroll">shopfitting</a></li>
+                <li><a href="" class="scroll">catering equipment</a></li>
+                <li><a href="" class="scroll">design & consilation</a></li>
+              </ul>
+            </li>
+            <li><a href="portfolio.html" class="scroll">portfolio</a></li>
+            <li><a href="contact.html" class="scroll">contact</a></li>
+            <li><a href="" class="scroll"><i class="iconsp-35-enquire-mobile"></i><span>enquire</span></a></li>
+          </ul>
+          <div id="main-menu"><a href="index.html" class="logo"><img src="images/logo.png">
+              <div class="logo-traingle"></div></a>
+            <div class="contact-mobile">
+              <ul>
+                <li><a href="https://login.live.com/" target="_blank"><i class="iconsp-35-email"></i></a></li>
+                <li><a href="https://www.google.com.au/maps/place/450-464+W+Botany+St,+Rockdale+NSW+2216/@-33.960414,151.145595,17z/data=!3m1!4b1!4m2!3m1!1s0x6b12b756afab412b:0x7be2c525df1e34c" target="_blank"><i class="iconsp-35-location"></i></a></li>
+                <li><a href=""><i class="iconsp-35-phone-white"></i></a></li>
+              </ul><a href="" class="phone-mobile"><i class="iconsp-35-phone-black"></i></a>
+            </div>
+          </div>
+        </div>
+        <ul class="main-bxslider">
+          <li><img src="images/slide-1.jpg" height="730">
+            <div class="title">
+              <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
+            </div>
+          </li>
+          <li><img src="images/slide-2.jpg" height="730">
+            <div class="title">
+              <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
+            </div>
+          </li>
+          <li><img src="images/slide-3.jpg" height="730">
+            <div class="title">
+              <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
+            </div>
+          </li>
+          <li><img src="images/slide-4.jpg" height="730">
+            <div class="title">
+              <h3>able to evolve with new design concepts and modern trends.</h3><span>Giving the client the opportunity to capture customers with ease.</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="services">
+        <div class="container">
+          <h1 class="title">services</h1>
+          <ul class="services-list">
+            <li><a href="">
+                <h4 class="sub-title"><span>stainless steel fabrication</span>
+                  <div class="traingle"></div>
+                </h4>
+                <p><i class="iconsp-steel"></i></p>
+                <ul class="name-list">
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                </ul></a></li>
+            <li><a href="">
+                <h4 class="sub-title"><span>refrigeration</span>
+                  <div class="traingle"></div>
+                </h4>
+                <p><i class="iconsp-fridge"></i></p>
+                <ul class="name-list">
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                </ul></a></li>
+            <li><a href="">
+                <h4 class="sub-title"><span>shopfitting</span>
+                  <div class="traingle"></div>
+                </h4>
+                <p><i class="iconsp-shopfitting"></i></p>
+                <ul class="name-list">
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                </ul></a></li>
+            <li><a href="">
+                <h4 class="sub-title"><span>catering equipment</span>
+                  <div class="traingle"></div>
+                </h4>
+                <p><i class="iconsp-catering"></i></p>
+                <ul class="name-list">
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                </ul></a></li>
+            <li><a href="">
+                <h4 class="sub-title"><span>design & consilation</span>
+                  <div class="traingle"></div>
+                </h4>
+                <p><i class="iconsp-design"></i></p>
+                <ul class="name-list">
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                  <li><span class="dot">.</span><span>Service Name</span></li>
+                </ul></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="why-choose">
+        <div class="background-before"><img src="images/before-why-choose.png" height="280"></div>
+        <div class="container">
+          <h1 class="title">why choose patra group</h1>
+          <ul class="row">
+            <li class="col-md-4">
+              <h3 class="sub-title">experience</h3><span>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span>
+            </li>
+            <li class="col-md-4">
+              <h3 class="sub-title">quality</h3><span>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span>
+            </li>
+            <li class="col-md-4">
+              <h3 class="sub-title">modern</h3><span>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span>
+            </li>
+          </ul><a href="" class="read-more">read more about us</a>
+        </div>
+        <div class="background-after"><img src="images/after-why-choose.png" height="143"></div>
+      </div>
+      <div class="testimonials">
+        <div class="container">
+          <h1 class="title">testimonials</h1>
+          <ul class="testimonials-bxSlider">
+            <li>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">pasiri's</h4><span>Eatwood</span>
+                </div>
+              </div>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">pasiri's</h4><span>Eatwood</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div><a href="" style="padding-top: 24px;" class="logo-image"><img src="images/testimonials-logo-2.jpg"></a>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">subway</h4><span>Marrickville</span>
+                </div>
+              </div>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-3.jpg"></a>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">garlos pies</h4><span>Eatwood</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-1.jpg"></a>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">pasiri's</h4><span>Eatwood</span>
+                </div>
+              </div>
+              <div><a href="" class="logo-image"><img src="images/testimonials-logo-3.jpg"></a>
+                <div class="content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer-citation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                  <h4 class="company">garlos pies</h4><span>Eatwood</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+          <ul>
+            <li><i class="iconsp-35-facebook"></i><a href="">Privacy Policy</a></li>
+            <li><span>Copyright © 2014 Patra Group Pty Ltd.</span><span>All rights reserved.</span></li>
+            <li><span>Designed by Openseed</span></li>
+          </ul>
+        </div>
+      </div>
+      <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary btn-lg"></button>
+      <div id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
+              <h4 id="myModalLabel" class="modal-title">Modal title</h4>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+              <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
