--- a/html/layout.html
+++ b/html/layout.html
@@ -14,7 +14,7 @@
     <link href="scss/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
