change span to p

--- a/html/index.html
+++ b/html/index.html
@@ -189,13 +189,16 @@
           <h1 class="title">why choose patra group</h1>
           <ul class="row">
             <li class="col-md-4">
-              <h3 class="sub-title">experience</h3><span>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span>
+              <h3 class="sub-title">experience</h3>
+              <p>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
             </li>
             <li class="col-md-4">
-              <h3 class="sub-title">quality</h3><span>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span>
+              <h3 class="sub-title">quality</h3>
+              <p>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
             </li>
             <li class="col-md-4">
-              <h3 class="sub-title">modern</h3><span>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</span>
+              <h3 class="sub-title">modern</h3>
+              <p>Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
             </li>
           </ul><a href="" class="read-more">read more about us</a>
         </div>
